[gd_scene load_steps=10 format=3 uid="uid://nnpxe0stwwmn"]

[ext_resource type="Script" path="res://scripts/unit_slinger.gd" id="1_oc4fx"]
[ext_resource type="Texture2D" uid="uid://dfvspp4l50hpm" path="res://art/slinger1.png" id="2_51pg5"]
[ext_resource type="Texture2D" uid="uid://dlbnnrggocdxb" path="res://art/slinger2.png" id="3_tphof"]
[ext_resource type="PackedScene" uid="uid://bthsr3u3p0tqt" path="res://scenes/health_bar.tscn" id="5_ajsmr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jc557"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_51pg5")
}],
"loop": true,
"name": &"sprite1",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tphof")
}, {
"duration": 1.0,
"texture": ExtResource("2_51pg5")
}],
"loop": false,
"name": &"sprite2",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n2d5l"]
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tx2w6"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oh8uj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h1mi7"]
radius = 250.0

[node name="unit_slinger" type="CharacterBody2D"]
z_index = 1
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 1.0
script = ExtResource("1_oc4fx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_jc557")
animation = &"sprite1"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="teamcoloricon" type="Polygon2D" parent="."]
modulate = Color(1, 1, 1, 0.443137)
z_index = -1
position = Vector2(0, 1)
scale = Vector2(0.171875, 0.164063)
polygon = PackedVector2Array(64, 0, 46.5455, -42.6665, 0, -60.9522, -46.5455, -42.6665, -64, 0, -46.5455, 48.7618, 0, 60.9522, 46.5455, 48.7618)

[node name="Marker2D" type="Marker2D" parent="."]

[node name="hitbox_area" type="Area2D" parent="."]
collision_layer = 8388609
collision_mask = 8388609

[node name="hitbox_collision" type="CollisionShape2D" parent="hitbox_area"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_n2d5l")

[node name="health_bar" parent="." instance=ExtResource("5_ajsmr")]
offset_left = -12.0
offset_top = -34.0
offset_right = 13.0
offset_bottom = -30.0

[node name="unit_collision" type="Area2D" parent="."]

[node name="unit_collisionshape" type="CollisionShape2D" parent="unit_collision"]
shape = SubResource("CircleShape2D_tx2w6")

[node name="pathfinding_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oh8uj")

[node name="aggro_area" type="Area2D" parent="."]

[node name="aggro_shape" type="CollisionShape2D" parent="aggro_area"]
shape = SubResource("CircleShape2D_h1mi7")

[connection signal="area_entered" from="hitbox_area" to="." method="_on_hitbox_area_area_entered"]
[connection signal="body_entered" from="unit_collision" to="." method="_on_collision_area_body_entered"]
